# Agent-Builder-Demo

./: .env.example  .gitignore  README.md  README_DEPLOYMENT.md  app.py  main.py  pyproject.toml  test_interrupt.py
.claude/: settings.local.json
docs/: Agent Builder Demo Version.md
src/: __init__.py
src/agent_builder/: __init__.py  agent_builder.py  agent_single_create.py  models.py  prompts.py  tools.py
src/agent_builder/middleware/: __init__.py  agent_config.py
src/model/: __init__.py
src/utils/: __init__.py  logger.py
